# src/sample1/gen/http/openapi3.yaml
@@ -19,7 +19,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Goa3SampleUserCollection'
+                $ref: '#/components/schemas/Goa3SampleHaCollection'
               example:
               - card: A
                 theme: Ha
@@ -40,10 +40,18 @@ paths:
               schema:
                 $ref: '#/components/schemas/Goa3SampleUserCollection'
               example:
-              - card: A
-                theme: Ha
-              - card: A
-                theme: Ha
+              - email: taro.yamada@xxx.jp
+                id: XRQ85mtXnINISH25zfM0m5RlC6L2
+                name: yamada taro
+              - email: taro.yamada@xxx.jp
+                id: XRQ85mtXnINISH25zfM0m5RlC6L2
+                name: yamada taro
+              - email: taro.yamada@xxx.jp
+                id: XRQ85mtXnINISH25zfM0m5RlC6L2
+                name: yamada taro
+              - email: taro.yamada@xxx.jp
+                id: XRQ85mtXnINISH25zfM0m5RlC6L2
+                name: yamada taro
     post:
       tags:
       - Users
@@ -57,9 +65,9 @@ paths:
             schema:
               $ref: '#/components/schemas/CreateUserRequestBody'
             example:
-              email: Aperiam eos.
+              email: Eos illum expedita ut doloremque alias distinctio.
               id: XRQ85mtXnINISH25zfM0m5RlC6L2
-              name: Ipsum laborum numquam.
+              name: Corrupti ipsum laborum numquam fugiat.
       responses:
         "201":
           description: Created response.
@@ -67,8 +75,8 @@ paths:
             application/json:
               schema:
                 type: string
-                example: Et cupiditate.
-              example: Sunt et officiis odit odit in.
+                example: Nemo ipsa doloribus voluptate qui molestias.
+              example: Adipisci esse.
   /api/v1/users/{id}:
     delete:
       tags:
@@ -82,8 +90,8 @@ paths:
         required: true
         schema:
           type: string
-          example: Vel libero optio esse eligendi error voluptas.
-        example: Adipisci esse.
+          example: At facilis quam rerum.
+        example: Vitae fugiat dolore dolore ea et.
       responses:
         "204":
           description: No Content response.
@@ -99,8 +107,8 @@ paths:
         required: true
         schema:
           type: string
-          example: Et occaecati assumenda.
-        example: Iusto at.
+          example: Sunt et officiis odit odit in.
+        example: Vel libero optio esse eligendi error voluptas.
       responses:
         "200":
           description: OK response.
@@ -137,8 +145,8 @@ paths:
             schema:
               $ref: '#/components/schemas/UpdateUserRequestBody'
             example:
-              email: Officia perspiciatis occaecati laboriosam natus autem laborum.
-              name: Sit sequi et rerum.
+              email: Inventore omnis delectus.
+              name: Officia perspiciatis occaecati laboriosam natus autem laborum.
       responses:
         "200":
           description: OK response.
@@ -158,7 +166,7 @@ components:
         email:
           type: string
           description: Email of user
-          example: Enim aspernatur molestiae ducimus eius.
+          example: Dicta fuga.
         id:
           type: string
           description: User id
@@ -168,16 +176,16 @@ components:
         name:
           type: string
           description: Name of user
-          example: Aspernatur voluptas quas eius tenetur minus.
+          example: Quia aut sed ea eum enim natus.
       example:
-        email: Dicta fuga.
+        email: Sit aspernatur sit officiis earum.
         id: XRQ85mtXnINISH25zfM0m5RlC6L2
-        name: Quia aut sed ea eum enim natus.
+        name: Et cupiditate.
       required:
       - id
       - name
       - email
-    Goa3SampleUser:
+    Goa3SampleHa:
       type: object
       properties:
         card:
@@ -195,28 +203,69 @@ components:
       required:
       - theme
       - card
-    Goa3SampleUserCollection:
+    Goa3SampleHaCollection:
       type: array
       items:
-        $ref: '#/components/schemas/Goa3SampleUser'
+        $ref: '#/components/schemas/Goa3SampleHa'
       example:
       - card: A
         theme: Ha
       - card: A
         theme: Ha
-      - card: A
-        theme: Ha
+    Goa3SampleUser:
+      type: object
+      properties:
+        email:
+          type: string
+          description: Email of user
+          example: taro.yamada@xxx.jp
+        id:
+          type: string
+          description: User id
+          example: XRQ85mtXnINISH25zfM0m5RlC6L2
+          minLength: 1
+          maxLength: 28
+        name:
+          type: string
+          description: Name of user
+          example: yamada taro
+      description: User Response
+      example:
+        email: taro.yamada@xxx.jp
+        id: XRQ85mtXnINISH25zfM0m5RlC6L2
+        name: yamada taro
+      required:
+      - id
+      - name
+      - email
+    Goa3SampleUserCollection:
+      type: array
+      items:
+        $ref: '#/components/schemas/Goa3SampleUser'
+      example:
+      - email: taro.yamada@xxx.jp
+        id: XRQ85mtXnINISH25zfM0m5RlC6L2
+        name: yamada taro
+      - email: taro.yamada@xxx.jp
+        id: XRQ85mtXnINISH25zfM0m5RlC6L2
+        name: yamada taro
+      - email: taro.yamada@xxx.jp
+        id: XRQ85mtXnINISH25zfM0m5RlC6L2
+        name: yamada taro
+      - email: taro.yamada@xxx.jp
+        id: XRQ85mtXnINISH25zfM0m5RlC6L2
+        name: yamada taro
     UpdateUserRequestBody:
       type: object
       properties:
         email:
           type: string
           description: Email of user
-          example: Nemo ipsa doloribus voluptate qui molestias.
+          example: Praesentium autem vitae et autem.
         name:
           type: string
           description: Name of user
-          example: Sit aspernatur sit officiis earum.
+          example: Repellat voluptatem.
       example:
-        email: Praesentium autem vitae et autem.
-        name: Repellat voluptatem.
+        email: Iusto at.
+        name: Et occaecati assumenda.
